WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133695
Don't call Connection::terminateSoon if the connection is null
https://bugs.webkit.org/show_bug.cgi?id=133695
Summary
Don't call Connection::terminateSoon if the connection is null
Anders Carlsson
Reported
2014-06-10 13:47:21 PDT
Don't call Connection::terminateSoon if the connection is null
Attachments
Patch
(2.21 KB, patch)
2014-06-10 13:47 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-06-10 13:47:50 PDT
Created
attachment 232810
[details]
Patch
Anders Carlsson
Comment 2
2014-06-10 13:56:44 PDT
Committed
r169763
: <
http://trac.webkit.org/changeset/169763
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug