Don't call Connection::terminateSoon if the connection is null https://bugs.webkit.org/show_bug.cgi?id=133695 <rdar://problem/17069024>

Reviewed by Tim Horton.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::removeWebPage):

Canonical link: https://commits.webkit.org/151673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169763 268f45cc-cd09-0410-ab3c-d52691b4dbfc